# homepage

./: .dockerignore  .gitignore  AGENTS.md  README.md  SPEEDTEST_README.md  autopep8.cfg  deploy.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.cursor/rules/: backend-architecture.mdc  backend-error-handling.mdc  backend-extension-points.mdc  backend-imports.mdc  backend-structure.mdc  backend-testing.mdc  code-formatting.mdc  extension-rules.mdc  frontend-component-organization.mdc  frontend-css.mdc  frontend-styling-guidelines.mdc  frontend-testing-guidelines.mdc  frontend-typescript-guidelines.mdc
backend/: .dockerignore  Dockerfile  __main__.py  requirements.txt
backend/src/: __init__.py
backend/tests/: base.py
browser-extension/: manifest.json  package-lock.json  package.json
deployment/: cli.py  deploy-docker.ps1  deploy-windows-native.ps1  requirements.txt
deployment/scripts/: startup_launcher.ps1
deployment/src/: cli.py
deployment/steps/: __init__.py  base_step.py  docker_deploy_step.py  example_command_step.py  native_backend_dependency_install_step.py  native_backend_deploy_step.py  native_frontend_dependency_install_step.py  native_frontend_deploy_step.py  windows_start_on_login_step.py
deployment/strategies/: __init__.py  base_strategy.py  docker_deploy_strategy.py  (+1 more)
extension/: README.md  background.ts  build.js  manifest.json  package-lock.json  package.json  tsconfig.json
extension/core/: Base.ts  (+5 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
tests/: base.py
(+377 files in other folders)
