[project]
name = "homepage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "danielutils>=1.1.24",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "jsonpath-ng>=1.8.0",
    "pydantic>=2.12.5",
    "speedtest-cli>=2.1.3",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "fire>=0.7.1",
    "isort>=8.0.1",
]
