[project]
name = "homepage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "danielutils>=1.1.24",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "jsonpath-ng>=1.8.0",
    "pydantic>=2.12.5",
    "speedtest-cli>=2.1.3",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "fire>=0.7.1",
    "isort>=8.0.1",
    "mypy>=1.20.0",
    "pylint>=4.0.5",
    "pytest>=9.0.1",
    "pytest-xdist>=3.5",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
extend-exclude = "/(\\.venv|venv|build|dist)/"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["backend", "deployment"]
known_first_party = ["backend", "deployment"]
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = ["-q", "-n", "auto"]
